--- a/package.json
+++ b/package.json
@@ -7,31 +7,34 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "npx ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/seed.ts"
+    "seed": "npx ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/seed.ts",
+    "seed:demo": "npx ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/seed-demo.ts",
+    "seed:demo:clear": "npx ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/seed-demo.ts --clear"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
+    "clsx": "^2.1.1",
+    "firebase": "^10.12.0",
+    "firebase-admin": "^12.1.0",
+    "lucide-react": "^0.378.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "firebase": "^10.12.0",
-    "firebase-admin": "^12.1.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0",
-    "lucide-react": "^0.378.0",
-    "canvas-confetti": "^1.9.3"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/canvas-confetti": "^1.6.4",
-    "typescript": "^5.4.5",
-    "tailwindcss": "^3.4.3",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
-    "dotenv": "^16.4.5"
+    "typescript": "^5.4.5"
   }
 }
